8313874: JNI NewWeakGlobalRef throws exception for null arg

Reviewed-by: phh
Backport-of: 028b3ae1b162bd8f7c340bfa6e9487ca83697955